RESOLVED FIXED115190
JSC: Fix interpreter misbehavior in builds with JIT disabled
https://bugs.webkit.org/show_bug.cgi?id=115190
Summary JSC: Fix interpreter misbehavior in builds with JIT disabled
Nick Diego Yamane (diegoyam)
Reported 2013-04-25 11:26:55 PDT
JSC: Fix interpreter misbehavior in builds with JIT disabled
Attachments
Patch (1.99 KB, patch)
2013-04-25 11:31 PDT, Nick Diego Yamane (diegoyam)
no flags
Patch (2.16 KB, patch)
2013-04-25 12:00 PDT, Nick Diego Yamane (diegoyam)
no flags
Nick Diego Yamane (diegoyam)
Comment 1 2013-04-25 11:31:16 PDT
Created attachment 199696 [details] Patch JSC: Fix interpreter misbehavior in builds with JIT disabled
Oliver Hunt
Comment 2 2013-04-25 11:36:46 PDT
Comment on attachment 199696 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=199696&action=review > Source/JavaScriptCore/interpreter/Interpreter.cpp:573 > -#if ENABLE(JIT) > +#if ENABLE(JIT) || ENABLE(LLINT) Just remove this, and the #else return 0 bit
Nick Diego Yamane (diegoyam)
Comment 3 2013-04-25 12:00:37 PDT
Created attachment 199729 [details] Patch Addressed oliver's request
WebKit Commit Bot
Comment 4 2013-04-25 12:53:47 PDT
Comment on attachment 199729 [details] Patch Clearing flags on attachment: 199729 Committed r149134: <http://trac.webkit.org/changeset/149134>
WebKit Commit Bot
Comment 5 2013-04-25 12:53:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.