JSC: Fix interpreter misbehavior in builds with JIT disabled https://bugs.webkit.org/show_bug.cgi?id=115190

Patch by Nick Diego Yamane <nick.yamane@openbossa.org> on 2013-04-25
Reviewed by Oliver Hunt.

Commit http://trac.webkit.org/changeset/147858 modified
some details on how JS stack traces are built. The method
"getLineNumberForCallFrame", renamed in that changeset to
"getBytecodeOffsetForCallFrame" is always returning `0' when
JIT is disabled

How to reproduce:
 - Build webkit with JIT disabled
 - Open MiniBrowser, for example, with http://google.com
 - In a debug build, WebProcess will hit the following ASSERT:
   Source/JavaScriptCore/bytecode/UnlinkedCodeBlock.cpp:279 ASSERT(low);

* interpreter/Interpreter.cpp:
(JSC::getBytecodeOffsetForCallFrame):

Canonical link: https://commits.webkit.org/133631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149134 268f45cc-cd09-0410-ab3c-d52691b4dbfc